--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "anu"
-version = "0.1.0"
+description = "A small general purpose library for games"
+authors = ["marcsh <marcsh@gmail.com>"]
+homepage = "http://sfin.ae"
+version = "0.0.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+
 [dependencies]
+tracing = "0.1"
